[gd_scene load_steps=3 format=3 uid="uid://dimfoqj71q6up"]

[ext_resource type="Script" uid="uid://rt4uko1nu1jl" path="res://src/objects/generic/death_tile.gd" id="1"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(32, 32)

[node name="DeathTile" type="Node2D"]
script = ExtResource("1")

[node name="DeathArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 134
priority = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
shape = SubResource("1")

[connection signal="body_entered" from="DeathArea" to="." method="_on_body_entered"]
